--- a/Pouch/app/src/main/res/layout/content_grid.xml
+++ b/Pouch/app/src/main/res/layout/content_grid.xml
@@ -37,6 +37,7 @@
         android:layout_width="72dp"
         android:layout_height="69dp"
         android:layout_marginLeft="84dp"
+        android:layout_marginTop="3dp"
         android:background="@color/colorPrimaryDark"
         android:padding="3dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -47,51 +48,61 @@
         android:id="@+id/imageView6"
         android:layout_width="72dp"
         android:layout_height="69dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="3dp"
         android:background="@color/colorPrimaryDark"
         android:padding="3dp"
-        app:srcCompat="@drawable/ic_launcher_foreground"
-        tools:layout_editor_absoluteX="169dp"
-        tools:layout_editor_absoluteY="303dp" />
+        app:layout_constraintLeft_toRightOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
 
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="72dp"
         android:layout_height="69dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="3dp"
         android:background="@color/colorPrimaryDark"
         android:padding="3dp"
-        app:srcCompat="@drawable/ic_launcher_foreground"
-        tools:layout_editor_absoluteX="252dp"
-        tools:layout_editor_absoluteY="303dp" />
+        app:layout_constraintLeft_toRightOf="@+id/imageView6"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="72dp"
         android:layout_height="69dp"
+        android:layout_marginLeft="84dp"
+        android:layout_marginTop="3dp"
         android:background="@color/colorPrimaryDark"
         android:padding="3dp"
-        app:srcCompat="@drawable/ic_launcher_foreground"
-        tools:layout_editor_absoluteX="86dp"
-        tools:layout_editor_absoluteY="379dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
 
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="72dp"
         android:layout_height="69dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="3dp"
         android:background="@color/colorPrimaryDark"
         android:padding="3dp"
-        app:srcCompat="@drawable/ic_launcher_foreground"
-        tools:layout_editor_absoluteX="169dp"
-        tools:layout_editor_absoluteY="379dp" />
+        app:layout_constraintLeft_toRightOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/imageView6"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
 
     <ImageView
         android:id="@+id/imageView9"
         android:layout_width="72dp"
         android:layout_height="69dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="3dp"
         android:background="@color/colorPrimaryDark"
         android:padding="3dp"
-        app:srcCompat="@drawable/ic_launcher_foreground"
-        tools:layout_editor_absoluteX="252dp"
-        tools:layout_editor_absoluteY="379dp" />
+        app:layout_constraintLeft_toRightOf="@+id/imageView8"
+        app:layout_constraintTop_toBottomOf="@+id/imageView7"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
 
     <ImageView
         android:id="@+id/imageView10"
