--- a/Pouch/app/src/main/res/values/colors.xml
+++ b/Pouch/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#033B1D</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#A6A6A6</color>
 </resources>
