--- a/Pouch/app/src/main/res/layout/content_main.xml
+++ b/Pouch/app/src/main/res/layout/content_main.xml
@@ -12,9 +12,9 @@
         android:id="@+id/topright_pouch"
         android:layout_width="148dp"
         android:layout_height="108dp"
+        android:layout_marginLeft="180dp"
         android:layout_marginTop="212dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/body_pack"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/pouch_pocket_r" />
 
@@ -22,8 +22,9 @@
         android:id="@+id/botright_pouch2"
         android:layout_width="148dp"
         android:layout_height="108dp"
-        android:layout_marginTop="320dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="180dp"
+        android:layout_marginTop="328dp"
+        app:layout_constraintLeft_toLeftOf="@+id/body_pack"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/pouch_pocket_r" />
 
@@ -43,9 +44,9 @@
         android:id="@+id/topleft_pouch"
         android:layout_width="151dp"
         android:layout_height="144dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="200dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="212dp"
+        android:layout_marginRight="176dp"
+        app:layout_constraintRight_toRightOf="@+id/body_pack"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/pouch_pocket" />
 
@@ -53,9 +54,76 @@
         android:id="@+id/botleft_pouch"
         android:layout_width="151dp"
         android:layout_height="144dp"
-        android:layout_marginLeft="36dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="164dp"
+        app:layout_constraintRight_toRightOf="@+id/body_pack"
         app:layout_constraintTop_toBottomOf="@+id/topleft_pouch"
         app:srcCompat="@drawable/pouch_pocket" />
+
+    <Button
+        android:id="@+id/topleft_butt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/topleft_pouch"
+        app:layout_constraintLeft_toLeftOf="@+id/topleft_pouch"
+        app:layout_constraintRight_toRightOf="@+id/topleft_pouch"
+        app:layout_constraintTop_toTopOf="@+id/topleft_pouch" />
+
+    <Button
+        android:id="@+id/botleft_butt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/botleft_pouch"
+        app:layout_constraintLeft_toLeftOf="@+id/botleft_pouch"
+        app:layout_constraintRight_toRightOf="@+id/botleft_pouch"
+        app:layout_constraintTop_toTopOf="@+id/botleft_pouch" />
+
+    <Button
+        android:id="@+id/topmid_butt"
+        android:layout_width="116dp"
+        android:layout_height="79dp"
+        android:layout_marginLeft="96dp"
+        android:text="Button"
+        android:visibility="invisible"
+        app:layout_constraintLeft_toLeftOf="@+id/body_pack"
+        app:layout_constraintTop_toTopOf="@+id/body_pack" />
+
+    <Button
+        android:id="@+id/botmid_butt"
+        android:layout_width="147dp"
+        android:layout_height="98dp"
+        android:layout_marginLeft="84dp"
+        android:layout_marginBottom="16dp"
+        android:text="Button"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/body_pack"
+        app:layout_constraintLeft_toLeftOf="@+id/body_pack" />
+
+    <Button
+        android:id="@+id/topright_butt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/topright_pouch"
+        app:layout_constraintLeft_toLeftOf="@+id/topright_pouch"
+        app:layout_constraintRight_toRightOf="@+id/topright_pouch"
+        app:layout_constraintTop_toTopOf="@+id/topright_pouch" />
+
+    <Button
+        android:id="@+id/botright_butt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/botright_pouch2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="@+id/botright_pouch2"
+        app:layout_constraintRight_toRightOf="@+id/botright_pouch2"
+        app:layout_constraintTop_toTopOf="@+id/botright_pouch2"
+        app:layout_constraintVertical_bias="0.583" />
 
 </android.support.constraint.ConstraintLayout>
